# buisnes_kufar

./: .env.example  .gitignore  DATABASE_DUMP_README.md  DEV-GUIDE.md  ORDERS_IMPLEMENTATION.md  README.md  apply_backup_on_server.sh  backup_20251026_143805.sql  check-health.ps1  colada.options.ts  create-test-user.ps1  create-test-users.ps1  database_dump.sql  deploy.sh  deploy_from_local.sh  deploy_serverside.sh  deploy_to_server.sh  dev-local.ps1  docker-compose.dev.yml  docker-compose.full-local.yml  docker-compose.local.yml  docker-compose.yml  fix_existing_chats.py  generate_ssl_on_server.sh  load_real_cities.py  restore_database_commands.md  restore_on_server.sh  test_chat_creation.py  test_cities_filter.html  ТЗ_Расширение.txt
backend/: .env  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.migrations  Makefile  README.md  SCRIPTS_SUMMARY.md  alembic.ini  celerybeat-schedule  check_user_position.py  cities_count.txt  create_owner.py  create_registration_token_employee.py  create_test_data.py  create_test_user.py  database.db  demo_seed.py  docker-compose-dev.yml  entrypoint.sh  fill_units_simple.py  link_user_company.py  load_belarus_cities_fixed.py  populate_cities.py  populate_realistic_data.py  populate_units.py  pyproject.toml  quick_seed.py  readmeDev.MD  requirements.txt  run_seed.py  seed_database.py  set_passwords.py  set_passwords_correct.py  simple_api_server.py  test_celery.py  test_swagger.db  test_taw.db
backend/alembic/: env.py
backend/app/: celery_app.py  main.py
backend/app_logging/: Notifications.py  logger.py
backend/cache/: cache.db  cache.db-shm  cache.db-wal
backend/data_cities/: Алтайского_края.txt  Астраханской_области.txt  Брянской_области.txt  Волгоградской_области.txt  Калининградской_области.txt  Калужской_области.txt  Камчатской_области.txt  Краснодарский_край.txt  Курской_области.txt  Ленинградской_области.txt  Московской_области.txt  Новгородской_области.txt  Новосибирской_области.txt  Омской_области.txt  Республики_Адыгея.txt  Республики_Северная_Осетия.txt  Республики_Хакасия.txt  Томской_области.txt  Тульской_области.txt  Тыва_города_Республики.txt  Ярославской_области.txt
backend/helpers/: FINAL_PARSE_README.md  SEED_README.md  TEST_RESULTS.md  add_cities_for_region.py  add_indexes.py  add_mari_cities.py  add_more_products.py  add_regions_for_other_countries.py  (+42 more)
(+680 files in other folders)
