[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["dmiv <dmitriy40647274@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.41"
alembic = "^1.16.1"
pydantic-settings = "^2.9.1"
sqladmin = "^0.20.1"
aiosqlite = "^0.21.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
