[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["dmiv <dmitriy40647274@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.41"
alembic = "^1.16.1"
pydantic-settings = ">=2.0.0,<3.0.0"
sqladmin = "^0.20.1"
aiosqlite = "^0.21.0"
httpx = "^0.28.1"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-multipart = "^0.0.20"
pydantic = {extras = ["email"], version = "^2.11.5"}
fastapi-mail = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
