[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["dmiv <dmitriy40647274@gmail.com>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.41"
alembic = "^1.16.1"
pydantic-settings = ">=2.0.0,<3.0.0"
sqladmin = "0.20.1"
aiosqlite = "^0.21.0"
httpx = "^0.28.1"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = "^1.7.4"
argon2-cffi = "^25.1.0"
bcrypt = "^3.2.2"
python-multipart = "^0.0.20"
pydantic = {extras = ["email"], version = "^2.11.5"}
fastapi-mail = "^1.5.0"
diskcache = "^5.6.3"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
aiofiles = "^24.1.0"
python-slugify = "^8.0.4"
asyncpg = "^0.30.0"
psycopg2 = "^2.9.10"
websockets = "^13.0"
pika = "^1.3.2"
celery = "^5.4.0"
kombu = "^5.4.0"
redis = "^5.2.0"
boto3 = "^1.35.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
